--- a/src/app/pages/products/main-products/main-products.page.html
+++ b/src/app/pages/products/main-products/main-products.page.html
@@ -1,33 +1,25 @@
 <ion-content class="ion-padding" [fullscreen]="true">
   <div class="container">
     <ion-text color="dark ion-text-center">
-      <h1>ADMINISTRACION GAME STORE</h1>
+      <h1>PRODUCTOS GAME STORE</h1>
     </ion-text>
     <div class="border-top my-3"></div>
     <ion-grid class="mt-5">
       <ion-row class="row justify-content-center">
         <ion-col >
-          <a routerLink="/rent" class="icon dark">
-            <img src="./assets/img/icon-sales.png"/>
+          <a routerLink="/products/create" class="icon dark">
+            <img src="./assets/img/icon-add-product.png"/>
           </a>
           <ion-text color="dark ion-text-center">
-            <h1>Alquiler</h1>
+            <h1>Crear Producto</h1>
           </ion-text>
         </ion-col>
         <ion-col >
-          <a routerLink="/products" class="icon dark">
-            <img src="./assets/img/icon-products.png"/>
+          <a routerLink="/products/update" class="icon dark">
+            <img src="./assets/img/icon-settings.png"/>
           </a>
           <ion-text color="dark ion-text-center">
-            <h1>Productos</h1>
-          </ion-text>
-        </ion-col>
-        <ion-col >
-          <a routerLink="/clients" class="icon dark">
-            <img src="./assets/img/icon-client.png"/>
-          </a>
-          <ion-text color="dark ion-text-center">
-            <h1>Adm. Clientes</h1>
+            <h1>Modificar Producto</h1>
           </ion-text>
         </ion-col>
       </ion-row>
