--- a/src/app/pages/rent/main/rent.page.html
+++ b/src/app/pages/rent/main/rent.page.html
@@ -19,7 +19,7 @@
             <img src="./assets/img/icon-search-sales.png"/>
           </a>
           <ion-text color="dark ion-text-center">
-            <h1>Consultar Ventas Día</h1>
+            <h1>Consultar Ventas</h1>
           </ion-text>
         </ion-col>
       </ion-row>
