--- a/src/app/pages/rent/main/rent.page.html
+++ b/src/app/pages/rent/main/rent.page.html
@@ -15,8 +15,8 @@
           </ion-text>
         </ion-col>
         <ion-col >
-          <a routerLink="/rent/search" class="icon dark">
-            <img src="./assets/img/icon-search-sales.png"/>
+          <a class="icon dark">
+            <img src="./assets/img/icon-search-sales.png" (click)='optionNotAvailable()'/>
           </a>
           <ion-text color="dark ion-text-center">
             <h1>Consultar Ventas</h1>
