--- a/src/app/pages/products/create-product/create-product.page.html
+++ b/src/app/pages/products/create-product/create-product.page.html
@@ -62,7 +62,7 @@
               <div class="input-group-prepend">
                 <span class="input-group-text">Tecnología</span>
               </div>
-              <ion-select  class="form-control" placeholder="Marca" interface="alert" formControlName="technology">
+              <ion-select  class="form-control" placeholder="Tecnología" interface="alert" formControlName="technology">
                 <ion-select-option value="{{technology.id}}" *ngFor="let technology of technologies">
                   {{technology.name}}</ion-select-option>
               </ion-select>
